--- a/package.json
+++ b/package.json
@@ -17,11 +17,13 @@
     "@radix-ui/react-scroll-area": "^1.0.5",
     "@radix-ui/react-separator": "^1.0.3",
     "@radix-ui/react-slot": "^1.0.2",
+    "@sanity/image-url": "^1.0.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "cmdk": "^1.0.0",
     "embla-carousel-react": "^8.0.0",
     "next": "14.1.4",
+    "next-sanity": "^8.5.0",
     "next-themes": "^0.3.0",
     "react": "^18",
     "react-dom": "^18",
