--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "clsx": "^2.1.0",
     "cmdk": "^1.0.0",
     "embla-carousel-react": "^8.0.0",
+    "lucide-react": "^0.364.0",
     "next": "14.1.4",
     "next-sanity": "^8.5.0",
     "next-themes": "^0.3.0",
