--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-dom": "^18",
     "tailwind-merge": "^2.2.2",
     "tailwindcss-animate": "^1.0.7",
+    "use-shopping-cart": "^3.2.0",
     "vaul": "^0.9.0"
   },
   "devDependencies": {
