--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@sanity/image-url": "^1.0.2",
     "axios": "^1.6.8",
     "class-variance-authority": "^0.7.0",
+    "cloudinary": "^2.1.0",
     "clsx": "^2.1.0",
     "cmdk": "^1.0.0",
     "embla-carousel-react": "^8.0.0",
