--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "db": "npx json-server -p 3002 db.json"
   },
   "dependencies": {
+    "@prisma/adapter-pg": "^5.13.0",
+    "@prisma/client": "^5.13.0",
     "@radix-ui/react-aspect-ratio": "^1.0.3",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-icons": "^1.3.0",
@@ -29,6 +31,7 @@
     "next": "14.1.4",
     "next-sanity": "^8.5.0",
     "next-themes": "^0.3.0",
+    "pg": "^8.11.5",
     "react": "^18",
     "react-dom": "^18",
     "tailwind-merge": "^2.2.2",
@@ -46,6 +49,7 @@
     "json-server": "^1.0.0-alpha.23",
     "postcss": "^8",
     "prettier": "^3.2.5",
+    "prisma": "^5.13.0",
     "tailwindcss": "^3.3.0",
     "typescript": "^5"
   }
