--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "next": "14.1.4",
     "next-sanity": "^8.5.0",
     "next-themes": "^0.3.0",
+    "nodemon": "^3.1.3",
     "pg": "^8.11.5",
     "react": "^18",
     "react-dom": "^18",
