--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "next dev",
     "build": "prisma generate && next build",
-    "start": "next start",
+    "start": "npx esrun backend/server.ts",
     "lint": "next lint",
     "db": "npx json-server -p 3002 db.json"
   },
