Authentication not working...yet!

--- a/.env
+++ b/.env
@@ -2,3 +2,6 @@
 DATABASE_URL = "postgres://ecom_data_user:9061IgCxrdCYFMpcpN2PCVK7GxEyy7gB@dpg-cosrceq1hbls73apoeb0-a.oregon-postgres.render.com/ecom_data"
 PORT= 3007
 JWT_SECRET = duAj3Oq8it 
+GOOGLE_CLIENT_ID = sasa
+GOOGLE_CLIENT_SECRET = sasasas
+AUTH_SECRET= zYmW4si9TMwnJuKoC7f7QZhzgSq51qqesNXHuDN6kBU=
