--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "db": "npx json-server -p 3002 db.json"
   },
   "dependencies": {
+    "@auth/express": "^0.5.6",
+    "@auth/prisma-adapter": "^2.4.1",
     "@prisma/adapter-pg": "^5.13.0",
     "@prisma/client": "^5.14.0",
     "@radix-ui/react-aspect-ratio": "^1.0.3",
@@ -20,7 +22,9 @@
     "@radix-ui/react-scroll-area": "^1.0.5",
     "@radix-ui/react-separator": "^1.0.3",
     "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-tabs": "^1.1.0",
     "@sanity/image-url": "^1.0.2",
+    "auth": "^1.0.2",
     "axios": "^1.6.8",
     "bcrypt": "^5.1.1",
     "class-variance-authority": "^0.7.0",
@@ -28,11 +32,13 @@
     "clsx": "^2.1.0",
     "cmdk": "^1.0.0",
     "embla-carousel-react": "^8.0.0",
+    "esrun": "^3.2.26",
     "express": "^4.19.2",
     "express-jwt": "^8.4.1",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.364.0",
     "next": "14.1.4",
+    "next-auth": "^5.0.0-beta.19",
     "next-sanity": "^8.5.0",
     "next-themes": "^0.3.0",
     "nodemon": "^3.1.3",
@@ -41,6 +47,7 @@
     "react-dom": "^18",
     "tailwind-merge": "^2.2.2",
     "tailwindcss-animate": "^1.0.7",
+    "tsc": "^2.0.4",
     "use-shopping-cart": "^3.2.0",
     "vaul": "^0.9.0",
     "zod": "^3.23.8"
