--- a/package.json
+++ b/package.json
@@ -19,11 +19,13 @@
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-navigation-menu": "^1.1.4",
+    "@radix-ui/react-popover": "^1.1.1",
     "@radix-ui/react-scroll-area": "^1.0.5",
     "@radix-ui/react-separator": "^1.0.3",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-tabs": "^1.1.0",
     "@sanity/image-url": "^1.0.2",
+    "add": "^2.0.6",
     "auth": "^1.0.2",
     "axios": "^1.6.8",
     "bcrypt": "^5.1.1",
@@ -38,13 +40,16 @@
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.364.0",
     "next": "14.1.4",
-    "next-auth": "^5.0.0-beta.19",
+    "next-auth": "^4.24.7",
     "next-sanity": "^8.5.0",
     "next-themes": "^0.3.0",
     "nodemon": "^3.1.3",
+    "npx": "^10.2.2",
     "pg": "^8.11.5",
+    "popover": "^2.4.1",
     "react": "^18",
     "react-dom": "^18",
+    "shadcn-ui": "^0.8.0",
     "tailwind-merge": "^2.2.2",
     "tailwindcss-animate": "^1.0.7",
     "tsc": "^2.0.4",
